<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LanguagesActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/chooseLanguageToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_back"
                android:id="@+id/ivChooseLanguageBack"/>

            <TextView
                android:fontFamily="serif"
                android:id="@+id/tvChooseLanguageActionBarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/choose_language"
                android:textColor="#fff"
                android:textSize="20dp" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:fontFamily="serif"
            android:background="@drawable/linear_background_selector"
            android:clickable="true"
            android:id="@+id/tvKhmer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/khmer_language"
            android:textColor="#000"/>

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:background="#949393"
            android:layout_height="0.1dp" />

        <TextView
            android:fontFamily="serif"
            android:background="@drawable/linear_background_selector"
            android:clickable="true"
            android:id="@+id/tvEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/english_language"
            android:textColor="#000"/>

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:background="#949393"
            android:layout_height="0.1dp" />

    </LinearLayout>

</LinearLayout>