<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CheckNetworkConnectionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Search In Your Hands"
            android:textSize="25dp"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/knongDai_sub_title"/>

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/trans_white_rectangle"
        android:paddingTop="150dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="#ff0000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/internet_connection"/>

        <TextView
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="15dp"
            android:textColor="#ff0000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_your_internet_connection"/>

        <Button
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:paddingLeft="120dp"
            android:paddingRight="120dp"
            android:drawablePadding="10dp"
            android:id="@+id/btnRetry"
            android:text="Retry"
            android:background="@drawable/regiter_button"
            android:textColor="#fff"
            android:drawableLeft="@drawable/ic_refresh"
            android:textAllCaps="false"
            android:fontFamily="sans-serif"/>

    </LinearLayout>

</FrameLayout>