<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_marginTop="20dp"/>

        <TextView
            android:fontFamily="serif"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Search In Your Hands"
            android:textSize="25dp"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:fontFamily="serif"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/knongDai_sub_title"/>

        <Button
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:drawablePadding="10dp"
            android:id="@+id/btnLogin"
            android:text="Sing in with Facebook"
            android:background="@drawable/regiter_button"
            android:textColor="#fff"
            android:drawableLeft="@drawable/com_facebook_button_login_logo"
            android:textAllCaps="false"
            android:layout_centerInParent="true"
            android:fontFamily="serif"/>

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:fontFamily="serif"
                android:textColor="#484646"
                android:textSize="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_login"
                android:layout_gravity="center"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="1dp"
                android:background="#484646"
                android:layout_height="wrap_content" />

            <TextView
                android:fontFamily="serif"
                android:textColor="#484646"
                android:textSize="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_use"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>